Upgrade to full production-grade architecture (v0.2.0)
- Milvus (HNSW) replaces ChromaDB as the vector store, with graceful degradation
- Real SSE streaming chat via Spring AI 1.0.0 GA ChatClient (Flux<String>)
- JWT auth + RBAC: ROLE_USER/ROLE_ADMIN, per-user data isolation, admin bootstrap
- Risk management closed loop: RiskEvent persistence + human review API
- MCP server: email & risk-recording tools exposed over Model Context Protocol
- training/: LoRA fine-tuning pipeline (dataset prep, SFT, confusion-matrix eval)
- 20 tests: JWT, intent parsing, security/RBAC integration
- Bilingual README + architecture docs updated to match implementation